fixed line breaks on output

--- a/app/app-content/css/simulator.css
+++ b/app/app-content/css/simulator.css
@@ -41,4 +41,6 @@
    width:90%;
    border:1px solid grey;
    overflow-y:auto;
+   text-align:left;
+   white-space: pre-line;
 }
